contact form fix

--- a/contact.html
+++ b/contact.html
@@ -65,9 +65,9 @@
 <!-- ######################## -->
 <!-- &&&&&&&&&&&&&&&&&&&&&&&& -->
     <!-- store info section -->
-    <section id="storeInfo">
+    <section id="storeInfo" data-aos="fade-up">
         <div class="container">
-            <div class="storeInfo-wrapper" data-aos="fade-left">
+            <div class="storeInfo-wrapper">
                 <!-- working hours -->
                 <div class="storeInfo-item">
                     <div class="storeInfo-icon">
@@ -109,8 +109,7 @@
     </section>
     <!-- end store info section -->
     <!-- Contact form section -->
-    <section id="form" data-aos="zoom-in"
-    data-aos-anchor-placement="bottom-bottom">
+    <section id="form" data-aos="fade-down">
         <div class="container">
             <h3 class="form-title">
                 Contact & Inquiry
